NODE_ENV=development

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"node": "20.5.1"
 	},
 	"scripts": {
-		"dev": "yarn && concurrently \"yarn dev:server\" \"yarn dev:client\"",
-		"dev:integration": "NODE_ENV=integration concurrently \"PORT=4175 yarn start:server\" \"VITE_PORT=4174 yarn dev:client\"",
+		"dev": "yarn && NODE_ENV=development concurrently \"yarn dev:server\" \"yarn dev:client\"",
+		"dev:integration": "NODE_ENV=development concurrently \"PORT=4175 yarn start:server\" \"VITE_PORT=4174 yarn dev:client\"",
 		"dev:server": "nodemon --watch src/ --ext ts,json --exec \"tsx src/server.ts\"",
 		"dev:client": "vite dev",
 		"start": "yarn build && NODE_ENV=production yarn start:server",
