--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"node": "20.5.1"
 	},
 	"scripts": {
-		"dev": "yarn && NODE_ENV=development concurrently \"yarn dev:server\" \"yarn dev:client\"",
-		"dev:integration": "NODE_ENV=development concurrently \"PORT=4175 yarn start:server\" \"VITE_PORT=4174 yarn dev:client\"",
+		"dev": "yarn && NODE_ENV=development concurrently \"yarn dev:server\" \"PUBLIC_API_PORT=3000 yarn dev:client\"",
+		"dev:integration": "NODE_ENV=development concurrently \"PORT=4175 yarn start:server\" \"VITE_PORT=4174 PUBLIC_API_PORT=4175 yarn dev:client\"",
 		"dev:server": "nodemon --watch src/ --ext ts,json --exec \"tsx src/server.ts\"",
 		"dev:client": "vite dev",
 		"start": "yarn build && NODE_ENV=production yarn start:server",
@@ -32,6 +32,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.1",
 		"@types/node": "20.5.1",
 		"@types/uuid": "^9.0.2",
@@ -56,8 +57,9 @@
 		"vitest": "^0.32.2"
 	},
 	"dependencies": {
-		"@laxels/utils": "^1.0.8",
+		"@laxels/utils": "^1.0.11",
 		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"http-status-codes": "^2.2.0",
 		"immer": "^9.0.21",
